[package]
name = "search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# eframe, egui_extras, ntfs_reader, windows, rayon

[dependencies]
rayon = "1.10.0"
eframe = "0.31.1"
egui_extras = "0.31.1"
# ntfs-reader = { path = "C:\\Users\\ryanw\\Coding\\rust\\ntfs-reader\\" }
ntfs-reader = "*"
rustc-hash = "2.1.1"
windows = { version = "0.61.1", features = [
    "Win32_Storage_FileSystem",     # GetLogicalDrives, GetDriveTypeA
    "Win32_Foundation",             # BOOL, GetLastError, HWND, etc.
    "Win32_System_Ioctl",           # USN_REASON_* constants
    "Win32_UI_Shell",               # SHGetFileInfoW, SHFILEINFOW, SHGFI_* flags
    "Win32_Graphics_Gdi",           # GDI objects (HICON, HBITMAP), functions (GetIconInfo, DeleteObject, GetObjectW, GetDIBits, GetDC, ReleaseDC), BITMAP*, etc.
    "Win32_UI_WindowsAndMessaging", # DestroyIcon
] }


[profile.release]
lto = "fat"        # Enable full link-time optimization.
codegen-units = 1  # Use only 1 codegen-unit to enable full optimizations.
# strip = true     # Strip symbols from the binary.
# debug = true

[profile.dev]
opt-level = 2
